[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/IceSpear/IceVFX 1 Repeatable.png" type="Texture" id=1]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Projectile/PlayerIceSpear.gd" type="Script" id=3]
[ext_resource path="res://Assets/IceSpear/Ice VFX 1 Hit.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10.5, 2.75 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:hframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}

[sub_resource type="Animation" id=4]
resource_name = "hit"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02, 0.04, 0.06, 0.08, 0.1, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="PlayerIceSpear" groups=["Projectile"] instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 5
script = ExtResource( 3 )
damage = 30
SPEED = 200

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 1 )
hframes = 10

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -1, 0.75 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
autoplay = "start"
anims/RESET = SubResource( 1 )
anims/hit = SubResource( 4 )
anims/start = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="3"]
position = Vector2( -1.5, 0 )
scale = Vector2( 1.25, 1 )

[connection signal="area_entered" from="." to="." method="_on_PlayerIceSpear_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerIceSpear_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
